# VisiTexta

./: README.md  index.html  package.json  tailwind.config.cjs
app/: .gitignore  README.md  package-lock.json  package.json
app/src/: App.css  App.tsx  index.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/resources/tessdata/: README.txt
app/src-tauri/src/: errors.rs  events.rs  formatting.rs  lib.rs  llm.rs  models.rs  ocr.rs  pdf.rs  pipeline.rs  settings.rs
app/src/components/: DropZone.tsx  FileQueue.tsx  MarkdownPreview.tsx  SettingsDrawer.tsx  ToastNotifications.tsx
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DropZone.tsx  GlowCard.tsx  ModelSelector.tsx  OutputPanel.tsx  PdfPreview.tsx  ProcessingStatus.tsx
src/lib/: models.ts  tauri.ts
src/pages/: App.tsx
src/styles/: index.css
