[package]
name = "visitexta"
version = "0.1.0"
description = "Local OCR studio powered by vision-language models"
authors = ["VisiTexta"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
dirs-next = "2"
sysinfo = { version = "0.30", features = ["macros"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
